--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string-array name="settings_upload_values">
+        <item>auto_on_finish</item>
+        <item>auto_un_metered</item>
+        <item>manual</item>
+    </string-array>
     <string-array name="settings_color_theme_keys">
         <item>system-default</item>
         <item>light</item>
