--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -5,12 +5,12 @@
         android:icon="@drawable/settings_gear"
         android:title="@string/settings_app_behaviour">
 
-        <SwitchPreferenceCompat
-            android:key="auto_upload_on_metered"
-            android:summaryOff="@string/settings_only_wifi_upload_off"
-            android:summaryOn="@string/settings_only_wifi_upload_on"
-            android:defaultValue="true"
-            android:title="@string/settings_only_wifi_upload" />
+        <ListPreference
+            android:key="auto_upload_behaviour"
+            android:title="@string/settings_upload_behaviour_title"
+            android:entries="@array/settings_upload_options"
+            android:entryValues="@array/settings_upload_values"
+            android:defaultValue="auto_un_metered" />
 
         <ListPreference
             android:key="color_theme"
